--- a/htdocs/t/css/ie6.css
+++ b/htdocs/t/css/ie6.css
@@ -1,7 +1,7 @@
 /* Author: Kornilov Pavel */
 <!--#include file="/t/css/ie.css" -->
 
-html{filter:expression(runtimeStyle.filter = '',document.execCommand('BackgroundImageCache',false,true));}
+html{filter:expression(runtimeStyle.filter='',document.execCommand('BackgroundImageCache',false,true));}
 body{height:100%;}
 #top .nav img{padding-top:12px;}
 #b-bill .total,#b-bill .total *,
@@ -51,18 +51,10 @@ body{height:100%;}
 #top h2 img,
 #top h1 img{display:none;}
 #ingridients-page .count-cocktails *{position:relative;z-index:2;zoom:1;}
-html.loaded #ingridients-page .count-cocktails{position :absolute;top :expression(eval(document.documentElement.scrollTop+297) + "px");/*border-width*/
-behavior:expression(
-(runtimeStyle.behavior==''&&currentStyle.backgroundImage!='none') ?
-insertAdjacentHTML('afterBegin','<div class="ie"" style="height:10px;width:10px;position:absolute;top:0;left:0'
-+';filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='+currentStyle.backgroundImage.split('\"')[1]+',sizingMethod=crop)">'+'<img src="'+currentStyle.backgroundImage.split('\"')[1]+'" style="visibility:hidden" alt="" /></div>') :'',
-runtimeStyle.backgroundImage = 'none',
-runtimeStyle.behavior = 'none'
-);}
+#ingridients-page .count-cocktails{position:absolute;top:expression(eval(document.documentElement.scrollTop+297)+"px");background:#fafafa;border:1px #ddd solid;}
 .win-shop .b-alternative ul img,
 #cocktail-page .hreview .entry .illustration,
-#mybar-cocktails li img{filter:expression( (runtimeStyle.filter == '') ? runtimeStyle.filter="progid:DXImageTransform.Microsoft.AlphaImageLoader(src='"+src+"',sizingMethod=image)" :'',
-src = '/t/0.png');}
+#mybar-cocktails li img{filter:expression((runtimeStyle.filter=='')?runtimeStyle.filter="progid:DXImageTransform.Microsoft.AlphaImageLoader(src='"+src+"',sizingMethod=image)":'',src='/t/0.png');}
 #related ul li a img,#poster,#ingreds_surface .point img{scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}
 #cocktail-page{}
 #cocktail-page .b-title{}
@@ -87,12 +79,10 @@ src = '/t/0.png');}
 .mybar-user .menu a:hover *{zoom:1;}
 #mybar-cocktails{width:96em;}
 #mybar-cocktails .viewport{width:76.5em;}
-#b-bill .total li{filter :expression(
-(runtimeStyle.backgroundImage != 'none') ? runtimeStyle.filter = 'progid:DXImageTransform.Microsoft.AlphaImageLoader(src='+currentStyle.backgroundImage.split('\"')[1]+',sizingMethod=scale)' :runtimeStyle.filter,
-runtimeStyle.backgroundImage = 'none');}
+#b-bill .total li{filter:expression((runtimeStyle.backgroundImage!='none')?runtimeStyle.filter='progid:DXImageTransform.Microsoft.AlphaImageLoader(src='+currentStyle.backgroundImage.split('\"')[1]+',sizingMethod=scale)':runtimeStyle.filter,runtimeStyle.backgroundImage='none');}
 #b-bill .total li a{position:relative;}
 html{background:url(/t/0.png);background-attachment:fixed;}
-#mybar {position :absolute;top :expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-clientHeight-6) + "px");}
+#mybar {position :absolute;top :expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-clientHeight-6)+"px");}
 .b-search form dd{zoom:1;}
 .b-search form dd span{white-space:normal;}
 .b-search form dd a{position:relative;right:-5px;background:red;}
@@ -107,5 +97,4 @@ html{background:url(/t/0.png);background-attachment:fixed;}
 #about-page .b-content{width:590px;}
 #about-page .b-content .border-links{width:581px;}
 #about-page #poster{position:absolute;top:42px;}
-#about-page #view-stat .stat .prev{background-position-x:0;}
 #preloader{top:0;left:0;width:100%;height:100%;}
