--- a/htdocs/t/css/public.css
+++ b/htdocs/t/css/public.css
@@ -6,7 +6,7 @@
 .win-shop .b-gadget .count input,
 .win-shop .content dd input,
 #b-bill dd input,
-.b-search form input{border:1px solid red;text-align:center;height:15px;font-size:1em;line-height:1;padding:3px 0 0 0;border-color:#d7d7d7 #fff #fff #d7d7d7;background:#f1f7b6;margin:0;width:35px;}
+.b-search form input{border:1px solid;text-align:center;height:15px;font-size:1em;line-height:1;padding:3px 0 0 0;border-color:#d7d7d7 #fff #fff #d7d7d7;background:#f1f7b6;margin:0;width:35px;}
 /* nav str */
 .b-alternative .next,
 .b-alternative .prev,
@@ -21,4 +21,4 @@
 .gallery-nav li a:hover{border:3px solid #0392f1;width:34px;height:34px;}
 .gallery-nav li a:hover img{margin:-2px 0 0 -2px;}
 .gallery-nav li img{display:block;}
-#preloader{position:absolute;top:0;left:0;bottom:0;right:0;background:#fff url(/t/loader-black.gif) no-repeat center 200px;opacity:0.85;z-index:65535;text-align:center;padding:250px 0 0 15px;color:#555;font-size:20px;}
+#preloader{position:absolute;top:0;left:0;bottom:0;right:0;background:#fff url(/t/loader-black.gif) no-repeat center 200px;opacity:0.85;z-index:65535;text-align:center;padding:250px 0 0 0;color:#555;font-size:20px;}
